2020-09-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* wand/magick_wand.c (MagickSetSamplingFactors): Correct
	formatting of sampling factors string.  Fixes SourceForge issue
	633 "MagickSetSamplingFactors() API mismatch - comma separated
	values instead of 1x1 ".

2020-09-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (DrawPrimitive): Improve error checking related
	to ImagePrimitive.

	* magick/resize.c (ResizeImage): If CloneImage() of resize_image
	to source_image fails then free source_image allocation before
	returning in order to prevent memory leak.

	* magick/image.c (CloneImage): Free clone_image allocation if
	ImgExtra allocation fails in order to prevent memory leak.  Fixes
	oss-fuzz 25342 "Indirect-leak in MagickMalloc".
	(SetImageOpacity): SetImageOpacity() now returns error status
	since it is possible for it to fail.

2020-09-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (ReadTIFFImage): Ignore corrupt whitepoint and
	primary chromaticities tags.  Fixes oss-fuzz issue 25507
	"Divide-by-zero in DoubleToRational".  The divide by zero is
	actually in libtiff, but the bad values from the input file were
	propagated through GraphicsMagick.

2020-09-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/analyze.c (GetImageBoundingBox): Use solution proposed by
	Troy Patteson to solve SourceForge issue 345 "MagickTrimImage with
	extreme fuzz can produce image with negative width".

2020-08-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (ReadTIFFImage): Apply the same resource limits to
	TIFF tile sizes as apply to the image itself.  Fixes oss-fuzz
	issues 24523 "Timeout in coder_TIFF_fuzzer" and 24810 "Timeout in
	coder_PTIF_fuzzer".

2020-08-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Add --without-gdi32 configure option to support
	disabling use of the Microsoft Windows gdi32 library if it is not
	wanted.
